--- a/bbf/src/main/resources/jdbc.properties
+++ b/bbf/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/bff
+url=jdbc:mysql://localhost:3306/bbf
 username=root
 password=root
 
