--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   	<bbf.version>0.0.1-SNAPSHOT</bbf.version>
 	<servlet.version>3.0.1</servlet.version>
 	<spring.version>4.2.1.RELEASE</spring.version>
+	<quartz.version>2.2.2</quartz.version>
 	<mybatis.version>3.3.0</mybatis.version>
 	<mybatis-spring.version>1.2.3</mybatis-spring.version>
 	<mysql-connector-java.version>5.1.14</mysql-connector-java.version>
@@ -24,6 +25,9 @@
   <modules>
   	<module>bbf</module>
   	<module>bffCommon</module>
+  	<module>bbfSchedule</module>
+  	<module>bbfPaginator</module>
+  	<module>bbfUser</module>
   </modules>
   
   <dependencies>
@@ -156,18 +160,29 @@
 		<version>3.4</version>
 	</dependency>
 		
-  	
-  	<dependency>  
-        <groupId>mysql</groupId>  
-        <artifactId>mysql-connector-java</artifactId>  
-        <version>${mysql-connector-java.version}</version>  
-    </dependency>
-    
     <dependency>
 		<groupId>org.apache.commons</groupId>
 		<artifactId>commons-dbcp2</artifactId>
 		<version>2.1.1</version>
 	</dependency>
+  	
+    <dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3.1</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.quartz-scheduler</groupId>
+		<artifactId>quartz</artifactId>
+		<version>${quartz.version}</version>
+	</dependency>
+	
+  	<dependency>  
+        <groupId>mysql</groupId>  
+        <artifactId>mysql-connector-java</artifactId>  
+        <version>${mysql-connector-java.version}</version>  
+    </dependency>
 	
 	<dependency>  
         <groupId>com.alibaba</groupId>  
@@ -175,11 +190,6 @@
         <version>1.2.7</version>  
     </dependency> 
     
-    <dependency>
-		<groupId>commons-fileupload</groupId>
-		<artifactId>commons-fileupload</artifactId>
-		<version>1.3.1</version>
-	</dependency>
 	
 	<dependency>
 		<groupId>jstl</groupId>
